metadata/force-app/main/default/objects/CustomName_qjGAp__c/CustomName_qjGAp__c.object-meta.xml
<CustomObject>
    <description>Description_uDzsP</description>
    <label>CustomLabel_eqXnR</label>
    <nameField>
        <label>CustomLabel_eqXnR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_eqXnRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>