metadata/force-app/main/default/objects/CustomName_qjGAp__c/fields/CustomField_kGvmg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kGvmg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGdEkO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>