metadata/force-app/main/default/objects/CustomName_qjGAp__c/fields/CustomField_KUnrc__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KUnrc__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwZmsp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>